完成首页组件的拆分

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,11 @@
-<p>
-  footer works!
-</p>
+<!-- 页脚组件 -->
+<div class="container">
+	<hr>
+	<footer>
+		<div class="row">
+			<div class="col-lg-12">
+				<p>angular4项目</p>
+			</div>
+		</div>
+	</footer>
+</div>
