--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-md-9">
       <!-- 轮播图 -->
-      <div class="row">
+      <div class="row carousel-container">
         <app-carousel></app-carousel>
       </div>
       <!-- 产品详情 -->
