--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,3 +1,29 @@
-<p>
-  carousel works!
-</p>
+<!-- 轮播图组件 -->
+<div class="carousel slie" data-ride="carousel">
+	<ol class="carousel-indicators">
+		<li class="active"></li>
+		<li></li>
+		<li></li>
+		<li></li>
+	</ol>
+	<div class="carousel-inner">
+		<div class="item active">
+			<img class="slide-image swiperStyle" src="./../../assets/0.png">
+		</div>
+		<div class="item">
+			<img class="slide-image swiperStyle" src="./../../assets/1.png">
+		</div>
+		<div class="item">
+			<img class="slide-image swiperStyle" src="./../../assets/2.png">
+		</div>
+		<div class="item">
+			<img class="slide-image swiperStyle" src="./../../assets/3.png">
+		</div>
+	</div>
+	<a href="javascript:$('.carousel').carousel('prev')" class="left carousel-control">
+		<span class="glyphicon glyphicon-chevron-left"></span>
+	</a>
+	<a href="javascript:$('.carousel').carousel('next')" class="right carousel-control">
+		<span class="glyphicon glyphicon-chevron-right"></span>
+	</a>
+</div>
