--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,14 @@
-<p>
-  product works!
-</p>
+<!-- 产品组件 -->
+<div *ngFor="let product of products" class="col-md-4 col-sm-4 col-lg-4">
+	<div class="thumbnail">
+		<img src="http://placehold.it/320x150">
+		<div class="caption">
+			<h4 class="pull-right">{{product.price}}元</h4>
+			<h4><a href="">{{product.title}}</a></h4>
+			<p>{{product.desc}}</p>
+		</div>
+		<div>
+			<app-stars [rating]="product.rating"></app-stars>
+		</div>
+	</div>
+</div>
