--- a/src/app/stars/stars.component.html
+++ b/src/app/stars/stars.component.html
@@ -1,3 +1,5 @@
+<!-- 星级评价组件 -->
 <p>
-  stars works!
+	<span  *ngFor="let star of stars" class="glyphicon glyphicon-star" [class.glyphicon-star-empty]="star"></span>
+	<span>{{rating}}星</span>
 </p>
