--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,7 @@
       <app-search></app-search>
     </div>
     <div class="col-md-9">
-      <!-- 轮播图 -->
-      <div class="row carousel-container">
-        <app-carousel></app-carousel>
-      </div>
-      <!-- 产品详情 -->
-      <div class="row">
-        <app-product></app-product>
-      </div>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
